# chatbot-tester

./: .gitignore  404.html  README.md  daily_planning.md  index.html  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sample_config.json  sample_config.yaml  sitemap.xml  smoke_test.py
.github/workflows/: build.yml  docs.yml
.windsurf/rules/: backend-error-handling-and-observability-guide.md  between-testcase-runconfig-mapping-advisor.md  consistent-report-structure-generator.md  core-domain-model-guardian.md  dataset-version-consistency-validator.md  evaluator-and-metrics-design-advisor.md  global-chatbot-test-framework-mindset.md  new-repo-and-new-architecture-bootstrapper.md  prompt-evaluation-safety-guard.md  runner-architecture-review.md
agent-readme/: WindSurfRule.md  chatbot-tester-architecture.md  lm-eval-so-architecture.md
docs/: README.drawio  index.md
docs/reference/: api.md  cli.md
docs/usage/: evaluator.md  examples.md  extending-backends.md  extending-metrics.md  generator.md  overview.md  quickstart-e2e.md  report-schema.md  runner.md  test-design.md
example/: README.md
example/ces_model_test/: README.md  main.py
example/ces_model_test/adb_run/: run_on_device.py
example/ces_model_test/evaluate/: apply_llm_judge_openai.py  eval_config.json  evaluate_results.py  summarize_report_openai.py
example/custom_metric/: run_custom_metric.sh
example/multiturn_chat/: run_multiturn.sh
example/quickstart/: run_quickstart.sh
reference/api/: index.html
reference/cli/: index.html
search/: search_index.json
src/chatbot_tester/: config.py  main.py  mcp_server.py
src/chatbot_tester.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/chatbot_tester/evaluator/: README.md  __init__.py  cli.py  domain.py  plugin.py  pyproject.toml
src/chatbot_tester/evaluator/metrics/: __init__.py  exact_match.py  keyword.py  semantic_similarity.py  tool_call.py
src/chatbot_tester/evaluator/report/: base.py  html_reporter.py  json_reporter.py
src/chatbot_tester/evaluator/src/: cli.py  domain.py
src/chatbot_tester/evaluator/src/metrics/: base.py  llm_judge.py
src/chatbot_tester/evaluator/src/report/: markdown_reporter.py
src/chatbot_tester/generator/: README.md  __init__.py  cli.py  pipeline.py  pyproject.toml  schema.py  types.py
src/chatbot_tester/generator/loaders/: doc_to_qa.py
src/chatbot_tester/generator/src/: __init__.py  types.py
src/chatbot_tester/generator/src/loaders/: __init__.py  csv_loader.py
src/chatbot_tester/generator/src/transformers/: __init__.py  filters.py  sampler.py
src/chatbot_tester/generator/src/writers/: __init__.py  jsonl_writer.py  metadata_writer.py
src/chatbot_tester/generator/synthetic/: __init__.py  openai_structure.py
src/chatbot_tester/generator/transformers/: augmenter.py  canonicalizer.py  filters.py
src/chatbot_tester/generator/writers/: metadata_writer.py
src/chatbot_tester/runner/: README.md  __init__.py  cli.py  exceptions.py  models.py  pyproject.toml  runner_context.py  runner_core.py  storage.py  utils.py
src/chatbot_tester/runner/backends/: __init__.py  adb_cli_backend.py  base.py  openai_backend.py
src/chatbot_tester/runner/src/: __init__.py  cli.py  models.py  storage.py
src/chatbot_tester/runner/src/backends/: base.py  openai_backend.py
src/lm_eval_so/: config.py  main.py  mcp_server.py
src/lm_eval_so.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config.py
tests/common/: test_models.py  test_workspace.py
tests/core/: test_storage.py
tests/evaluator/: test_metrics.py  test_plugin.py  test_reporter.py
tests/generator/: test_augmenter.py  test_loaders.py  test_pipeline.py
tests/runner/: test_streaming.py
usage/evaluator/: index.html
usage/examples/: index.html
usage/extending-backends/: index.html
usage/extending-metrics/: index.html
usage/generator/: index.html
usage/overview/: index.html
usage/quickstart-e2e/: index.html
usage/report-schema/: index.html
usage/runner/: index.html
usage/test-design/: index.html
weekly/: 2025-W05-Day1.md  2025-W05-Day2.md  2025-W05.md  2025-W06-Day1.md  2025-W06-day1.md  2025-W06-day2.md  2025-W06-day3.md  2025-W06-day4.md  2025-W07-day1.md  2025-W09-Day1.md  2026-W02-Day2.md  2026-W02-Day4.md  2026-W02-day2.md  template.2025-Wxx.md
(+97 files in other folders)
