[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-tester"
version = "0.2.0"
description = "Chatbot testing framework: dataset generator, runner, evaluator"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "chatbot-tester" }]
keywords = ["chatbot", "testing", "evaluation", "dataset", "runner", "evaluator"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "PyYAML>=6.0",
  "openai>=1.35.0",
  "pydantic>=2.0",
]

# 이 루트 프로젝트는 주로 개발/문서/예제용 메타 패키지 역할을 하며,
# 실제 파이썬 패키지는 각 서브 디렉터리(src/chatbot_tester/generator, runner, evaluator)에 정의된다.

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
