[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-tester-evaluator"
version = "0.1.0"
description = "Evaluator + metric/report plugins for chatbot-tester framework"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "chatbot-tester" }]
keywords = ["chatbot", "evaluation", "metrics", "llm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pydantic>=2.7,<3.0",
  "numpy>=1.26,<2.0",
  "rich>=13.7",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["httpx>=0.27"]

[project.scripts]
chatbot-eval = "chatbot_tester.evaluator.cli:main"
chatbot-evaluator = "chatbot_tester.evaluator.cli:main"

[tool.setuptools]
packages = ["chatbot_tester.evaluator"]
package-dir = {"chatbot_tester.evaluator" = "src"}
