[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-tester"
version = "0.1.0"
description = "Provider-agnostic dataset generator for chatbot testing"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "chatbot-tester"}]
keywords = ["chatbot", "dataset", "generator", "evaluation", "testing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
gen-dataset = "chatbot_tester.generator.cli:main"

[tool.setuptools]
packages = ["chatbot_tester.generator"]
package-dir = {"chatbot_tester.generator" = "src"}
