[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-tester-runner"
version = "0.0.1"
description = "Chatbot Test Runner (placeholder implementation)"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "chatbot-tester" }]

[project.scripts]
chatbot-runner = "chatbot_tester.runner.cli:main"

[tool.setuptools]
packages = ["chatbot_tester.runner"]
package-dir = {"chatbot_tester.runner" = "src"}
